--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.3.1",
+    "dayjs": "^1.11.7",
     "pinia": "^2.0.28",
     "pinia-persistedstate": "^0.1.2",
     "secure-ls": "^1.2.6",
